@@ -43,6 +43,7 @@ import java.util.ArrayList;
 import javax.swing.Icon;
 import javax.swing.ImageIcon;
 
+import com.vividsolutions.jump.workbench.ui.plugin.PersistentBlackboardPlugIn;
 import org.openjump.core.geomutils.Circle;
 
 import com.vividsolutions.jts.geom.Coordinate;
@@ -174,7 +175,8 @@ public class DrawConstrainedCircleTool extends ConstrainedMultiClickTool {
             getPanel().getContext().warnUser(isValidOp.getValidationError()
                                                       .getMessage());
 
-            if (getWorkbench().getBlackboard().get(EditTransaction.ROLLING_BACK_INVALID_EDITS_KEY, false)) {
+            if (PersistentBlackboardPlugIn.get(getWorkbench().getContext())
+                    .get(EditTransaction.ROLLING_BACK_INVALID_EDITS_KEY, false)) {
                 return false;
             }
         }
