@@ -47,6 +47,7 @@ import com.vividsolutions.jump.workbench.ui.EditTransaction;
 import com.vividsolutions.jump.workbench.ui.LayerNamePanelProxy;
 import com.vividsolutions.jump.workbench.ui.cursortool.CursorTool;
 import com.vividsolutions.jump.workbench.ui.cursortool.editing.FeatureDrawingUtil;
+import com.vividsolutions.jump.workbench.ui.plugin.PersistentBlackboardPlugIn;
 
 public class DrawConstrainedLineStringTool extends ConstrainedMultiClickTool {
     private FeatureDrawingUtil featureDrawingUtil;
@@ -103,7 +104,8 @@ public class DrawConstrainedLineStringTool extends ConstrainedMultiClickTool {
             getPanel().getContext().warnUser(isValidOp.getValidationError()
                                                       .getMessage());
 
-            if (getWorkbench().getBlackboard().get(EditTransaction.ROLLING_BACK_INVALID_EDITS_KEY, false)) {
+            if (PersistentBlackboardPlugIn.get(getWorkbench().getContext())
+                    .get(EditTransaction.ROLLING_BACK_INVALID_EDITS_KEY, false)) {
                 return false;
             }
         }
