@@ -3,6 +3,10 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2016-10-13 mmichaud <m.michael.michaud@orange.fr>
+  * EditOptions are now persistent except rolling back invalid edits which is
+    activated by default (in OpenJumpConfiguration)
+
 2016-10-09 mmichaud <m.michael.michaud@orange.fr>
   * Refactoring of EditOptionsPanel + add single editable layer option
 
